--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ keywords = ["xircuits", "pytorch", "data preprocessing", "classification"]
 dependencies = [
     "Cython",
     "pycaret==3.3.*",
-    "mlflow"
+    "mlflow==2.17.2"
 ]
 
 # Xircuits-specific configurations
