--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,112 @@
-Cython
-pycaret==3.3.2
+zipp==3.21.0
+numpy==1.26.4
+six==1.17.0
+pyasn1==0.6.1
+wrapt==1.17.0
+importlib-metadata==8.5.0
+attrs==24.3.0
+rpds-py==0.22.3
+typing-extensions==4.12.2
+certifi==2024.12.14
+charset-normalizer==3.4.0
+idna==3.10
+urllib3==2.2.3
+smmap==5.0.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+packaging==24.2
+tenacity==9.0.0
+pandas==2.1.4
+tzdata==2024.2
+patsy==1.0.1
+scipy==1.11.4
+contourpy==1.3.0
+cycler==0.12.1
+fonttools==4.55.3
+importlib-resources==6.4.5
+kiwisolver==1.4.7
+pillow==10.4.0
+pyparsing==3.2.0
+joblib==1.4.2
+matplotlib==3.7.5
+scikit-learn==1.5.0
+threadpoolctl==3.5.0
+cachetools==5.5.0
+pyasn1-modules==0.4.1
+asttokens==3.0.0
+executing==2.1.0
+blinker==1.9.0
+click==8.1.7
+colorama==0.4.6
+itsdangerous==2.2.0
+greenlet==3.1.1
+google-auth==2.37.0
+rsa==4.9
+opentelemetry-api==1.29.0
+opentelemetry-semantic-conventions==0.50b0
+decorator==5.1.1
+exceptiongroup==1.2.2
+jedi==0.19.2
+parso==0.8.4
+matplotlib-inline==0.1.7
+traitlets==5.14.3
+prompt-toolkit==3.0.48
+wcwidth==0.2.13
+stack-data==0.6.3
+pure-eval==0.2.3
+jsonschema-specifications==2024.10.1
+referencing==0.35.1
+platformdirs==4.3.6
+pywin32==308
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+llvmlite==0.43.0
+statsmodels==0.14.4
+requests==2.32.3
+graphql-core==3.2.5
+graphql-relay==3.2.0
+cloudpickle==3.1.0
+databricks-sdk==0.39.0
+gitdb==4.0.11
+opentelemetry-sdk==1.29.0
+protobuf==3.20.3
+comm==0.2.2
+ipython==8.18.1
+jupyterlab-widgets==3.0.13
+fastjsonschema==2.21.1
+jupyter-core==5.7.2
+dash==2.18.2
+plotly==5.24.1
+orjson==3.10.12
+numba==0.60.0
+scikit-base==0.12.0
+pmdarima==2.0.4
+alembic==1.14.0
+docker==7.1.0
+graphene==3.4.3
+mlflow-skinny==2.17.2
+sqlparse==0.5.3
+pyarrow==17.0.0
+waitress==3.0.2
+category-encoders==2.6.4
+deprecation==2.1.0
+imbalanced-learn==0.12.4
+ipywidgets==8.1.5
+widgetsnbextension==4.0.13
+kaleido==0.2.1
+lightgbm==4.5.0
+nbformat==5.10.4
+plotly-resampler==0.10.0
+tsdownsample==0.1.3
+psutil==6.1.0
+pyod==2.0.2
+schemdraw==0.15
+scikit-plot==0.3.7
+sktime==0.35.0
+tbats==1.1.3
+tqdm==4.67.1
+xxhash==3.5.0
+yellowbrick==1.5
 mlflow==2.17.2
+pycaret==3.3.0
