--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ zipp==3.21.0
 numpy==1.26.4
 six==1.17.0
 pyasn1==0.6.1
+deprecated==1.2.15
 wrapt==1.17.0
 importlib-metadata==8.5.0
 attrs==24.3.0
 rpds-py==0.22.3
+markupsafe==2.1.5
 typing-extensions==4.12.2
 certifi==2024.12.14
 charset-normalizer==3.4.0
@@ -14,7 +16,7 @@ urllib3==2.2.3
 smmap==5.0.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
-packaging==24.2
+packaging==23.2
 tenacity==9.0.0
 pandas==2.1.4
 tzdata==2024.2
@@ -39,6 +41,7 @@ blinker==1.9.0
 click==8.1.7
 colorama==0.4.6
 itsdangerous==2.2.0
+jinja2==3.1.4
 greenlet==3.1.1
 google-auth==2.37.0
 rsa==4.9
@@ -52,6 +55,7 @@ matplotlib-inline==0.1.7
 traitlets==5.14.3
 prompt-toolkit==3.0.48
 wcwidth==0.2.13
+pygments==2.18.0
 stack-data==0.6.3
 pure-eval==0.2.3
 jsonschema-specifications==2024.10.1
@@ -61,16 +65,23 @@ pywin32==308
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+flask==3.0.2
+werkzeug==3.0.6
 llvmlite==0.43.0
+cython==3.0.11
 statsmodels==0.14.4
-requests==2.32.3
+mako==1.3.8
+sqlalchemy==2.0.36
+requests==2.31.0
 graphql-core==3.2.5
 graphql-relay==3.2.0
 cloudpickle==3.1.0
 databricks-sdk==0.39.0
+gitpython==3.1.43
 gitdb==4.0.11
 opentelemetry-sdk==1.29.0
 protobuf==3.20.3
+pyyaml==6.0.2
 comm==0.2.2
 ipython==8.18.1
 jupyterlab-widgets==3.0.13
@@ -85,6 +96,7 @@ pmdarima==2.0.4
 alembic==1.14.0
 docker==7.1.0
 graphene==3.4.3
+markdown==3.7
 mlflow-skinny==2.17.2
 sqlparse==0.5.3
 pyarrow==17.0.0
@@ -99,7 +111,7 @@ lightgbm==4.5.0
 nbformat==5.10.4
 plotly-resampler==0.10.0
 tsdownsample==0.1.3
-psutil==6.1.0
+psutil==5.9.8
 pyod==2.0.2
 schemdraw==0.15
 scikit-plot==0.3.7
