--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ keywords = ["xircuits", "pytorch", "data preprocessing", "classification"]
 
 dependencies = [
     "Cython",
-    "pycaret==3.3.*",
+    "pycaret==3.3.2",
     "mlflow==2.17.2"
 ]
 
